Refs #140559 - Cards - fix spacing.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -170,9 +170,6 @@ div#page-document {
           padding: 5px;
 
           div.header {
-            position: relative;
-            top: 5px;
-            left: 5px;
             padding: 0px;
             margin: 0px;
             color: @sf-dark-gray;
